@@ -25,6 +25,7 @@
 #include <algorithm>
 #include <vector>
 #include <map>
+#include <string>
 #include "client.h"
 
 typedef enum {
